# daily_collections

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_back.txt  todo.md
JavaScript/Javascript_Pro4/: IOS圆角图标.html  readme.txt
JavaScript/Typora_themes/: github.css
Redis_learning/: README.md
Redis_learning/doc/: Lua_in_redis.md  commands.md  redis事务.md  redis持久化.md
Redis_learning/redis_geo/: index.html  redis_util.py  server.py
Redis_learning/redis_in_action/: chapter1_code.py  chapter4.4_code.py  chapter5_log_utils.py  chp11.py  chp5_counter.py  chp6_分布式锁.py  chp6_自动补全.py  generate_document.py
Redis_learning/utils/: lua_scripts.py  parse_command.py  redis_source_code_read.py
openai/: keys.txt
problems/: CAS.md  Github Markdown.md  code_template.txt  django_password.md  from_noteback.md  git_autocrlf.txt  github_repos.txt  git子模块.txt  git相关问题.txt  how to use uv.txt  python-parameters-for-function.py  python_mro.txt  python_packages.txt  python的相关工具.txt  search_todo_in_md.py  show_python_path.txt
problems/apache_related/: README.txt  httpd.conf
problems/clang/: array.c  array1.c
problems/database/: postgresql_readme.md
problems/git相关/: git相关问题.txt  提取分支的差异并转移到另一个新的分支.md
problems/jupyter/: readme.md
problems/linux/: readme.txt
problems/linux相关/: WSL相关命令.txt  shell&terminal.txt  ubuntu_commands.txt
problems/typst用法/: readme.txt  scripting.txt  格式化.txt  高级样式.txt
python/commons/: collections_usage.py  format_usage.py  named_tuple.py  python_typing_usage.py
python/concurrent_use/: simple_code2.py
python/sudoku/: run.py  (+1 more)
(+731 files in other folders)
